--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "homepage": "https://github.com/laurenshallop/SQL-Challenge-Employee-Tracker#readme",
   "dependencies": {
     "console.table": "^0.10.0",
-    "inquirer": "^8.2.1",
+    "express": "^4.18.1",
+    "inquirer": "^8.2.4",
     "mysql2": "^2.3.3"
   }
 }
