--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "sql-challenge-employee-tracker",
   "version": "1.0.0",
-  "description": "",
+  "description": "## License",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
